--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
     "core-js": "^2.5.7",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-pagination": "^3.1.1",
     "ngx-perfect-scrollbar": "^6.2.0",
+    "popper": "^1.0.1",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "simple-line-icons": "^2.4.1",
@@ -72,7 +76,7 @@
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.2.0",
-    "protractor": "^5.3.2",
+    "protractor": "^5.4.0",
     "ts-node": "^6.1.1",
     "tslint": "^5.10.0",
     "typescript": "2.7.2"
