--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "core-js": "^2.5.7",
     "flag-icon-css": "^3.0.0",
     "font-awesome": "^4.7.0",
+    "igniteui-angular": "^6.1.2",
     "jQuery": "^1.7.4",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
